[package]
name = "vikunja-tui"
version = "0.1.0"
edition = "2021"

[dependencies]
toml = "0.5"
dirs = "4.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ratatui = "0.28.1"
crossterm = "0.22"
dotenv = "0.15"
html2text = "0.3"
ansi-parser = "0.9"

